* The pilot's log now initially only loads up the first 50 most recent systems. There are two new contxt menu options on the grid to load up the next 50 as well or all the systems.
* removed Inset and delete row options from the grid context menu.
* Added max capacity to ships data and used this value to set the maximum value allowed in the ship cargo capacity control.

v2.0.8.0
--------
* On first start up, before the commander profile option is run, the ship list now defaults to all the ships with their initial, just purchased, options.

vv2.0.7.0
--------
* Changed the sections in which the ship data is stored to use the invaariant internal ship ID. This prevents problems when changing the ship's name or call sign.
* Added new ComboBoxItem class that simulated the ListItem class found in MVC and ASP.
* Moved ship data to config file.

2.0.6.1
--------
* Fixed issue #33

v2.0.6.0
--------
* Added new database maintenance form.
* Moved analyse to new form.
* Added vacuum command on new form.
* fixed bug that tried to run ANALYSE or VACUUM via TD after processing.

v2.0.5.9
--------
* Fixed issues #30, #31 & #32.

v2.0.5.8
--------
* Fixed issue #29

v2.0.5.7
--------
* Fixed issue #28
* Only check for verbose setting once per session.

v2.0.5.6
--------
* Fixed issue #25.
* Fixed issue #26.
* Fixed issue #27.

v2.0.5.5
--------
* Fixed issues #22 & #23.

v2.0.5.4
--------
* Fixed issue #21.
* Fixed issue #20.
* Fixed issue #19.
* Changed order of some controls as suggested by Tromador.

v2.0.5.3
--------
* Adding missing ship translations. 
* Changed ship translation code to return the internal ship type if no translation entry is found.
* Fixed issue #14.

v2.0.5.2
--------
* Merged another pull request from eyeonus.
* Skipvend is now persistent.

v2.0.5.1
--------
* Merged pull request from eyeonus.

v2.0.5.0
--------
* Changes the layout such that controls for a particular query are now all in one place.
* Error message now on top of everything.